------------------------------------------------
                version 4.0

* Documentation fixes
* Code fixes in soilStrength
* New functions: particle.sedimentation(), aggreg.stability(), r(), 
  psd(), Kr(), llwr_llmpr(), hydraulicCutOff2()
* New data: SoilAggregate

------------------------------------------------
                version 3.1

* Documentation fixes
* New functions: stressTraffic(), for predicting the 
  applied stress in the soil profile; soilStrength(),
  for predicting load bearing capacity; llwrPTF() and soilDeformation()
* Output "LLWR" of llwr() fixed
* New reference for citation()

------------------------------------------------
                version 3.0

* Documentation fixes
* New references for citation()
* Data skp1994 were updated (now in full)

------------------------------------------------
                version 2.4

* Documentation fixes
* New arguments for llwr() and new graphical output
* Missing legends added to iwc() graphs

------------------------------------------------
                version 2.3

* Documentation fixes
* New detailed output for iwc() and new
	graphical arguments
* Three new methods for calculating 'mcp' with maxcurv()

------------------------------------------------
                version 2.2

* Documentation fixes
* New argument (hos = 0) on iwc() for dealing with
	salinity effects
* Boundaries for the argument mcp of sigmaP()

------------------------------------------------
                version 2.1

* Documentation fixes
* corretions on the graphic output of iwc()
* 'mcp' bug fixed on sigmaP()
* new output for sigmaP(), now with compression and 
	decompression indices
* print method for sigmaP()
* new functions: simSigmaP() and plotCIsigmaP()
* bug fixed on maxcurv()
* new graphical output for maxcurv()

------------------------------------------------
                version 2.0

* Documentation fixes
* new argument (water.model) in the function llwr()